main functionalities completed

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,3 +1,10 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
 <!-- <app-camera-list></app-camera-list> -->
