--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -3,18 +3,21 @@
         <div class="col-sm">
             <div class="form m-5 mx-auto">
                 <h2 class="text-center my-5">Login</h2>
-                <form>
+                <form #loginForm="ngForm" (ngSubmit)="login()">
+                    <div *ngIf="error" class="alert alert-danger" role="alert">
+                        Incorrect username or password
+                      </div>
                     <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
-                    <input type="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" [formControl]="username">
+                    <input type="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" [(ngModel)]="username" name="username">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" [(ngModel)]="password" name="password">
                     </div>
                     
-                    <button type="submit" (click)="login()" class="btn btn-primary btn-block">Login</button>
+                    <button type="submit" class="btn btn-primary btn-block">Login</button>
                 </form>
             </div>
         </div>
