--- a/src/app/modules/camera/camera-list/camera-list.component.html
+++ b/src/app/modules/camera/camera-list/camera-list.component.html
@@ -1,2 +1,4 @@
-<p>camera-list works!</p>
-<app-camera></app-camera>
+<h2 class="my-4">Cameras</h2>
+<div class="card-deck">
+<app-camera *ngFor="let camera of cameras" [camera]="camera" ></app-camera>
+</div>
