--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Camera App</a>
+    <a class="navbar-brand" routerLink="/">Camera App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,26 +7,30 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        
+          <a class="nav-link" routerLink="/camera">{{'navbar.Camera' | translate}} <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
+            <a class="nav-link" >{{'navbar.Reporting' | translate}}</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link" >{{'navbar.Settings' | translate}}</a>
+          </li>
       </ul>
+      <ul class="navbar-nav">
+      <li class="nav-item mr-3">
+        <select #langSelect class="my-1 p-1" (change)="translate.use(langSelect.value)">
+            <option *ngFor="let lang of translate.getLangs()" [value]="lang" [selected]="lang === translate.currentLang">{{ lang }}</option>
+        </select>
+    </li>
+      <li class="nav-item ">
+        <a class="nav-link" >{{'navbar.Welcome' | translate}}, {{user}}</a>
+      </li>
+    <li class="nav-item ">
+        <button type="button" class="btn btn-info" (click)="logout()">{{'navbar.Logout' | translate}}</button>
+    </li>
+  </ul>
+     
       
     </div>
   </nav>
