--- a/src/app/modules/camera/camera-list/camera-list.component.html
+++ b/src/app/modules/camera/camera-list/camera-list.component.html
@@ -1,4 +1,4 @@
-<h2 class="my-4">Cameras</h2>
+<h2 class="my-4 text-center">{{'navbar.Cameras' | translate}}</h2>
 <div class="card-deck">
 <app-camera *ngFor="let camera of cameras" [camera]="camera" ></app-camera>
 </div>
