--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,8 +1,7 @@
-<app-navbar></app-navbar>
-<div class="container">
+<app-nav-bar></app-nav-bar>
+<div class="x-container">
     <div class="row">
         <div class="col">
-            
             <router-outlet></router-outlet>
         </div>
     </div>
